[package]
name = "cao-profile"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
csv=[]
default=["csv"]

[dependencies]
lazy_static = { version="1" }
serde= { version="1", optional=true, features=["derive"] }
