[package]
name = "cao-profile"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
csv = []
http = ["curl", "serde_json", "serde", "anyhow"]
default = ["csv"]

[dependencies]
lazy_static = { version="1" }
serde = { version="1", optional=true, features=["derive"] }
curl = { version="0.4", optional=true }
serde_json =  { version="1", optional=true }
anyhow =  { version="1", optional=true }
